[package]
name = "hcl2"
version = "0.0.1"
authors = ["Josh Lindsey <joshua.s.lindsey@gmail.com>"]
edition = "2018"
license = "ISC"
repository = "https://git.sr.ht/~jlindsey/hcl2"
keywords = ["serialization", "nom", "serde", "hcl2", "ast"]
categories = ["parsing", "parser-implementations", "encoding", "template-engine"]

[features]
default = []
trace = ["nom-tracable/trace"]

[dependencies]
thiserror = "1.0"
nom_locate = "4.1"
nom-tracable = "0.6"
paste = "1.0"
nom = { version = "5.1", default_features = false, features = ["std"] }

[dev-dependencies]
criterion = "0.3"
rstest = "0.6"

[[bench]]
name = "parse"
harness = false
